--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "vite": "^5.0"
     },
     "dependencies": {
+        "@shopify/draggable": "^1.1.3",
         "font-awesome-4": "^4.7.4"
     }
 }
