--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     },
     "dependencies": {
         "@shopify/draggable": "^1.1.3",
+        "composer": "^4.1.0",
         "font-awesome-4": "^4.7.4"
     }
 }
